--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ body {
 }
 
 h1 {
-    text-align: center;
-    margin-top: 30px;
+    position: relative;
+    background-color: rgba(0, 0, 0, 1);
+    color: rgb(255, 255, 255);
+    padding: 0.5em;
+    margin-bottom: 0.3em;
+    font-size: 1.5rem;
+    border-radius: 0.25em;
 }
 
 form {
@@ -89,7 +94,12 @@ li button {
     form {
         flex-direction: column;
     }
-
+    
+    input{
+        margin-left: 7.5px;
+        width: 100%;
+    }
+    
     input[type="text"] {
         margin-bottom: 10px;
     }
